# new_mime_guess

./: .gitignore  .mailmap  CHANGELOG.md  Cargo.toml  README.md  build.rs  clippy.toml  rustfmt.toml
.github/workflows/: rust.yml
benches/: benchmark.rs
examples/: rev_map.rs
src/: impl_bin_search.rs  impl_phf.rs  lib.rs  mime_types.rs
src/tests/: mod.rs
