[package]

name = "new_mime_guess"
version = "2.1.0"
authors = ["Austin Bonander <austin.bonander@gmail.com>", "Lynnesbian <lynne@bune.city>"]
license = "MIT"
description = "A simple crate for associating MIME types to file extensions."
keywords = ["mime", "filesystem", "extension"]
repository = "https://github.com/Lynnesbian/mime_guess"
documentation = "https://docs.rs/new_mime_guess/"
readme = "README.md"
exclude = ["*.sh"]

[features]
default = ["rev-mappings"]
# FIXME: when `phf` release 0.8.0 is ready
# phf-map = ["phf", "phf_codegen"]

# generate reverse-mappings for lookup of extensions by MIME type
# default-on but can be turned off for smaller generated code
rev-mappings = []

[dependencies]
mime = "0.3.16"
unicase = "2.6.0"

# [dependencies.phf]
# version = "0.8.0"
# features = ["unicase"]
# optional = true

[build-dependencies]
unicase = "2.6.0"

# [build-dependencies.phf_codegen]
# version = "0.8.0"
#git = "https://github.com/sfackler/rust-phf"
#path = "../rust-phf/phf_codegen"
# optional = true

[dev-dependencies]
criterion = "0.3.4"

[[example]]
name = "rev_map"
required-features = ["rev-mappings"]

[[bench]]
name = "benchmark"
harness = false
