[package]

name = "new_mime_guess"
version = "3.0.1"
authors = ["Austin Bonander <austin.bonander@gmail.com>", "Lynnesbian <lynne@bune.city>"]
license = "MIT"
description = "A simple crate for associating MIME types to file extensions."
keywords = ["mime", "filesystem", "extension"]
repository = "https://github.com/Lynnesbian/mime_guess"
documentation = "https://docs.rs/new_mime_guess/"
readme = "README.md"
exclude = ["*.sh"]
edition = "2018"
categories = ["filesystem"]
# rust-version = "1.40.0"

[features]
default = ["rev-mappings"]
phf-map = ["phf", "phf_codegen"]

# generate reverse-mappings for lookup of extensions by MIME type
# default-on but can be turned off for smaller generated code
rev-mappings = []

[dependencies]
mime = "0.3.16"
unicase = "2.6.0"
bitflags = "~1.2.1" # required to avoid update to 1.3.x, which requires Rust >= 1.46
half = "~1.7.1" # required to avoid update to 1.8.x, which requires Rust >= 1.51

[dependencies.phf]
version = "~0.10.0"
features = ["unicase"]
optional = true

[build-dependencies]
unicase = "2.6.0"

[build-dependencies.phf_codegen]
version = "~0.10.0"
optional = true

[dev-dependencies]
# 0.3.5 requires rust >=1.42
criterion = "=0.3.4"

[[example]]
name = "rev_map"
required-features = ["rev-mappings"]

[[bench]]
name = "benchmark"
harness = false

[package.metadata]
msrv = "1.40.0"